# strategic-thinking

./: .JuliaFormatter.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  roadmap.md  tasks.md
.github/workflows/: ci.yml
docs/: composition-architecture.md  context-driven-payoff-design.md  dsl-reference.md  glossary.md  llm-payoff-elicitation.md  mathematics.md  rationality-and-cultural-context.md  trait-composition-contract.md
jgdl/: README.md
jgdl/compliance/: compliance_suite.json  compliance_suite.json backup 1.jl
jgdl/compliance/tests/: antifragile_hedge_activation.json  antifragile_latent_confounder.json  antifragile_new_player.json  chapter02_entry_game.json  chapter04_prisoners_dilemma.json  chapter04_tft.json  chapter05_commitment.json  chapter06_credible_commitment.json  chapter07_matching_pennies.json  chapter08_brinkmanship.json  chapter09_focal_point.json  chapter10_condorcet.json  chapter11_bargaining.json  chapter12_tournament.json  chapter13_bayesian_auction.json  composition_sequential_mixed.json  composition_three_traits.json  inverse_payoff_shift.json  inverse_ranks_pd.json  provenance_integrity.json
jgdl/examples/: ch02_market_entry.json  ch06_burned_bridge.json  elicited_supplier_buyer.json
jgdl/examples/tales/: chicken.json  concert_problem.json  dollar_auction.json  elevator_dilemma.json  hot_hand.json
jgdl/schema/: v1.0.0.schema.json  v1.1.0.schema.json
scripts/: validate_jgdl.sh  validate_provenance_invariant.sh  validate_trait_declaration.sh
strategic-jl/: Project.toml  README.md
strategic-jl/notebooks/: explore_jgdl backup 1.jl  explore_jgdl.jl  explorer.jl
strategic-jl/src/: Strategic.jl
strategic-jl/src/antifragile/: hedges.jl  latent.jl  open_world.jl  player_discovery.jl  surprise_detector.jl
strategic-jl/src/chapters/: ch01_tales.jl  ch02_anticipation.jl  ch03_seeing_through.jl  ch04_pd_resolution.jl  ch05_commitment.jl  ch06_threats.jl  ch07_unpredictability.jl  ch08_brinkmanship.jl  ch09_coordination.jl  ch10_voting.jl  ch11_bargaining.jl  ch12_incentives.jl  ch13_bayesian.jl
strategic-jl/src/core/: provenance.jl  traits.jl  tree.jl  types.jl
strategic-jl/src/dsl/: macro.jl
strategic-jl/src/elicitation/: payoff_elicitation.jl
strategic-jl/src/jgdl/: deserialize.jl  serialize.jl  (+1 more)
strategic-jl/test/: compliance.jl  composition.jl  dsl.jl  repeated.jl  runtests.jl
strategic-rs/: Cargo.toml  README.md
strategic-rs/crates/strategic-core/: Cargo.toml
strategic-rs/crates/strategic-core/src/: game.rs  hash.rs  jgdl.rs  lib.rs  provenance.rs
strategic-rs/crates/strategic-mcp/: Cargo.toml
strategic-rs/crates/strategic-mcp/src/: main.rs  server.rs  tools.rs
strategic-rs/crates/strategic-solver/: Cargo.toml
strategic-rs/crates/strategic-solver/src/: backward.rs  inverse.rs  lib.rs
strategic-rs/crates/strategic-wasm/: Cargo.toml
strategic-rs/crates/strategic-wasm/src/: lib.rs
strategic-web/: README.md  package.json  tsconfig.json
strategic-web/src/: index.ts
(+11 files in other folders)
