[package]
name = "strategic-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for browser-native strategic reasoning."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strategic-core = { path = "../strategic-core" }
strategic-solver = { path = "../strategic-solver" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
